--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,3 +1,61 @@
 <section class="section products">
-  <div class="container">Products</div>
+  <div class="container">
+    <p class="products__label">100% natural</p>
+    <h2 class="products__title">products</h2>
+
+    <!-- Карточки товаров -->
+
+    <ul class="products__list">
+      <li class="card">
+        <div class="card__fon card__fon--ice">
+          <!-- На него мороженку как псевдо -->
+
+          <h3 class="products__subtitle">ice cream</h3>
+          <!-- На него точечки как псевдо -->
+
+          <p class="products__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+
+          <button type="button" class="products__button"></button>
+        </div>
+      </li>
+
+      <li class="card">
+        <div class="card__fon card__fon--coffee">
+          <!-- На него мороженку как псевдо -->
+
+          <h3 class="products__subtitle">ice coffee</h3>
+          <!-- На него точечки как псевдо -->
+
+          <p class="products__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+
+          <button type="button" class="products__button"></button>
+        </div>
+      </li>
+
+      <li class="card">
+        <div class="card__fon card__fon--shakes">
+          <!-- На него мороженку как псевдо -->
+
+          <h3 class="products__subtitle">milkshakes</h3>
+          <!-- На него точечки как псевдо -->
+
+          <p class="products__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et. dolore magna aliqua
+            facilisis.
+          </p>
+
+          <button type="button" class="products__button"></button>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
