--- a/src/sass/products/_products.scss
+++ b/src/sass/products/_products.scss
@@ -1,3 +1,100 @@
-.products {
-    background-color: deeppink;
+.products {}
+
+.products__label {
+    margin-bottom: 15px;
+
+
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    text-transform: uppercase;
+    color: #FFA5BA;
+}
+
+.products__title {
+    margin-bottom: 8px;
+
+
+
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 39px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #D41443;
+}
+
+.products__subtitle {
+    margin-bottom: 70px;
+
+
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.products__text {
+    margin-bottom: 32px;
+
+
+    text-align: center;
+
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 152%;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+}
+
+.products__button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border-color: #FFFFFF;
+    background-color: #FFFFFF;
+
+}
+
+/* Список карточек */
+.products__list {}
+
+.card {
+    padding-top: 140px;
+
+}
+
+.card__fon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding-top: 160px;
+    padding-bottom: 40px;
+
+    // width: 280px;
+    border-radius: 24px;
+}
+
+.card__fon--ice {
+    background-color: #FFB8CA;
+}
+
+.card__fon--coffee {
+    background-color: #F0D1A5;
+}
+
+.card__fon--shakes {
+    background-color: #C2E297;
 }
