--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,3 +1,5 @@
 <section class="section gallery">
-  <div class="container">ТУТ МОЖЕ БУТИ ВАШ КОД ГАЛЕРЕЇ</div>
+  <div class="container" style="text-align: center">
+    ТУТ МОЖЕ БУТИ ВАШ КОД ГАЛЕРЕЇ
+  </div>
 </section>
