--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,9 @@
 <footer class="page-footer">
   <div class="container page-footer__container">
     <p class="page-footer__label">
-      <span class="page-footer__title-begin">homemade ice cream made</span>
+      <span class="page-footer__title-begin"
+        >homemade ice cream made GROUP 28</span
+      >
       <span class="page-footer__title-end">with passion</span>
     </p>
     <ul class="socials">
