--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container page-footer__container">
     <p class="page-footer__label">
       <span class="page-footer__title-begin"
-        >homemade ice cream made GROUP 28</span
+        >homemade ice cream made by GROUP 28</span
       >
       <span class="page-footer__title-end">with passion</span>
     </p>
