--- a/src/sass/footer/_address.scss
+++ b/src/sass/footer/_address.scss
@@ -6,6 +6,14 @@
 
     display: flex;
     justify-content: flex-end;
+
+    @media screen and (min-width: $tablet) {
+        font-size: 14px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        font-size: 16px;
+    }
 }
 
 .address__appeal {
