--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -9,10 +9,12 @@ $secondary-title-color: #ffa5ba; // Section labels (100% natural, tradition and 
 
 //Break points
 $mobile: 320px;
-$mobile-max: 767px;
 $tablet: 768px;
-$tablet-max: 1199px;
 $desktop: 1200px;
+
+$mobile-max: $tablet - 1;
+$tablet-max: $desktop - 1;
+
 
 // Transition
 $default-transition-time: 250ms;
