--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,77 +1,79 @@
 <section class="section contacts">
   <div class="container">
     <h2 class="contacts__title">contacts</h2>
+  <!--контакты представительств-->
     <ul class="contacts__list">
-      <li class="contacts__card">
-        <ul class="card">
-          <p class="card__type">cafe</p>
-          <li class="card__content">
-            <p class="card__location">Chicago</p>
-            <p class="card__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      <li class="contacts__branch">
+        <ul class="branch">
+          <p class="branch__type">cafe</p>
+          <li class="branch__content">
+            <p class="branch__location">Chicago</p>
+            <p class="branch__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
           </li>
-          <li class="card__content">
-            <div class="card__weekdays">
-              <p class="card__days">Monday - Friday</p>
-              <p class="card__time">06:00 AM - 10:00 PM</p>
+          <li class="branch__content">
+            <div class="branch__weekdays">
+              <p class="branch__days">Monday - Friday</p>
+              <p class="branch__time">06:00 AM - 10:00 PM</p>
             </div>
-            <div class="card__weekends">
-              <p class="card__days">Saturday - Sunday</p>
-              <p class="card__time">08:00 AM - 16:00 PM</p>
+            <div class="branch__weekends">
+              <p class="branch__days">Saturday - Sunday</p>
+              <p class="branch__time">08:00 AM - 16:00 PM</p>
             </div>
           </li>
-          <li class="card__content">
+          <li class="branch__content">
             <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
             <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
           </li>
         </ul>
       </li>
-      <li class="contacts__card">
-      <ul class="card">
-        <p class="card__type">foodtruck</p>
-        <li class="card__content">
-          <p class="card__location">Los Angeles</p>
-          <p class="card__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      <li class="contacts__branch">
+      <ul class="branch">
+        <p class="branch__type">foodtruck</p>
+        <li class="branch__content">
+          <p class="branch__location">Los Angeles</p>
+          <p class="branch__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
         </li>
-        <li class="card__content">
-          <div class="card__weekdays">
-            <p class="card__days">Monday - Friday</p>
-            <p class="card__time">06:00 AM - 10:00 PM</p>
+        <li class="branch__content">
+          <div class="branch__weekdays">
+            <p class="branch__days">Monday - Friday</p>
+            <p class="branch__time">06:00 AM - 10:00 PM</p>
           </div>
-          <div class="card__weekends">
-            <p class="card__days">Saturday - Sunday</p>
-            <p class="card__time">08:00 AM - 16:00 PM</p>
+          <div class="branch__weekends">
+            <p class="branch__days">Saturday - Sunday</p>
+            <p class="branch__time">08:00 AM - 16:00 PM</p>
           </div>
         </li>
-        <li class="card__content">
+        <li class="branch__content">
           <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
           <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
         </li>
       </ul>
       </li>
-      <li class="contacts__card">
-        <ul class="card">
-          <p class="card__type">cafe</p>
-          <li class="card__content">
-            <p class="card__location">New York</p>
-            <p class="card__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+      <li class="contacts__branch">
+        <ul class="branch">
+          <p class="branch__type">cafe</p>
+          <li class="branch__content">
+            <p class="branch__location">New York</p>
+            <p class="branch__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
           </li>
-          <li class="card__content">
-            <div class="card__weekdays">
-              <p class="card__days">Monday - Friday</p>
-              <p class="card__time">06:00 AM - 10:00 PM</p>
+          <li class="branch__content">
+            <div class="branch__weekdays">
+              <p class="branch__days">Monday - Friday</p>
+              <p class="branch__time">06:00 AM - 10:00 PM</p>
             </div>
-            <div class="card__weekends">
-              <p class="card__days">Saturday - Sunday</p>
-              <p class="card__time">08:00 AM - 16:00 PM</p>
+            <div class="branch__weekends">
+              <p class="branch__days">Saturday - Sunday</p>
+              <p class="branch__time">08:00 AM - 16:00 PM</p>
             </div>
           </li>
-          <li class="card__content">
+          <li class="branch__content">
             <a class="link" href="tel:+610383766284">+61 (0) 383 766 284</a>
             <a class="link" href="mailto:noreply@envato.com">noreply@envato.com</a>
           </li>
         </ul>
       </li>
     </ul>
+  <!--кнопки для локации отделений-->
     <ul class="contacts__modal-btn">
       <li>
         <button class="button button--with-hover">
