--- a/src/sass/contacts/_contacts.scss
+++ b/src/sass/contacts/_contacts.scss
@@ -24,7 +24,7 @@
     display: none;
   }
   &__list {
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       & {
         display: flex;
         flex-wrap: wrap;
