header-tab-part-1

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
 
     <button class="mob-menu__open-btn button" type="button">
       <svg class="mob-menu__btn-icon-open" width="20" height="12">
-        <use href="./images/hero-header/symbol-defs.svg#icon-menu"></use>
+        <use href="./images/icons.svg#icon-menu"></use>
       </svg>
     </button>
 
@@ -34,10 +34,10 @@
       </ul>
     </nav>
 
-    <button class="header__buy-btn" type="button">
+    <button class="header__buy-btn button" type="button">
       <span class="header__buy-text">Buy now</span>
-      <svg class="header__buy-icon" width="5" height="8">
-        <use href="./images/icons.svg#icon-header-arrow-btn"></use>
+      <svg class="header__buy-icon" width="15" height="20">
+        <use href="./images/icons.svg#icon-arrow-common"></use>
       </svg>
     </button>
   </div>
@@ -47,17 +47,17 @@
       <div class="mob-menu__wrapper">
         <h2 class="visually-hidden">Mobile menu</h2>
 
-        <button class="mob-menu__close-btn" type="button">
-          <svg class="mob-menu__close-icon" width="40" height="40">
-            <use href="./images/hero-header/symbol-defs.svg#icon-close"></use>
+        <button class="mob-menu__close-btn button" type="button">
+          <svg class="mob-menu__close-icon" width="20" height="20">
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
 
-        <button class="mob-menu__buy-btn">
+        <button class="mob-menu__buy-btn button">
           <span class="mob-menu__buy-text">Buy now</span>
           <span>
-            <svg class="mob-menu__buy-icon" width="7" height="10">
-              <use href="./images/icons.svg#icon-header-arrow-btn"></use>
+            <svg class="mob-menu__buy-icon" width="15" height="20">
+              <use href="./images/icons.svg#icon-arrow-common"></use>
             </svg>
           </span>
         </button>
