--- a/src/sass/header/_page-header.scss
+++ b/src/sass/header/_page-header.scss
@@ -44,8 +44,6 @@
     align-items: center;
     text-align: center;
     justify-content: center;
-    border: 0;
-    border-radius: 20px;
 
     background-color: #fff;
        
@@ -60,7 +58,7 @@
 
 .header__buy-icon {
     fill: $accent-color;
-    margin-left: 16px;
+    margin-left: 10px;
 }
 
 
@@ -74,6 +72,7 @@
     text-align: center;
 
     margin-left: auto;
+    margin-right: 30px;
     padding: 0;
     border: 0;
     cursor: pointer;
@@ -109,22 +108,20 @@
 .backdrop-mob {
     position: fixed;
     top: 0;
-    right: 0;
-    width: 250px;
+    width: 100%;
     height: 100%;
     
     background-color: #E17992;
 }
 
 .mob-menu {
-    position: fixed;
+
+    height: 100%;
     top: 0;
     right: 0;
     
     padding: 20px 0;
     margin: 0 auto;
-    display: contents;
-
 }
 
 
@@ -138,39 +135,32 @@
 .mob-menu__close-btn {
     padding-right: 20px;
     margin-left: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
+
 
     width: 40px;
     height: 40px;
     background-color: transparent;
-    color: #fff;
-    border: none;
-
 }
 
 .mob-menu__close-icon {
-    fill: $accent-color;
+    fill: #ffffff;
 }
 
 .mob-menu__close-icon:hover {
-    background-color: #ffffff;
-    border-radius: 50%;
     fill: $accent-color;
 }
 
 .mob-menu__buy-btn {
     display: inline-flex;
-    align-items: center;
+
     text-align: center;
     justify-content: center;
-    border: 0;
+
     padding: 12px 48px;
     margin-top: 60px;
     margin-left: 20px;
     margin-right: 20px;
-    border-radius: 20px;
 
     height: 44px;
     width: 209px;
@@ -186,11 +176,11 @@
 
 .mob-menu__buy-icon {
     fill: $accent-color;
-    margin-left: 16px;
+    margin-left: 10px;
 }
 
 .mob-menu__list {
-    padding-left: 0;
+
     margin-top: 32px;
     margin-bottom: 0;
     list-style: none;
