--- a/src/sass/gallery/_gallery.scss
+++ b/src/sass/gallery/_gallery.scss
@@ -1,3 +1,81 @@
 .gallery {
-    background-color: coral;
+  background-image: linear-gradient(
+    to bottom,
+    $secondary-background-color 20%,
+    $primary-background-color 20%,
+    $primary-background-color 80%
+  );
+
+  .gallery__container {
+    padding: 0;
+    max-width: 320px;
+    margin: 0 auto;
+  }
+  .gallery__list {
+    width: 100%;
+    max-width: 100vh;
+    display: grid;
+
+    gap: 2.53px;
+    grid-template-columns: repeat(auto-fit, minmax(43px, 1fr));
+    grid-template-rows: [start] minmax(43px, 1fr) [row2] minmax(43px, 1fr) [row-end] minmax(
+        43px,
+        1fr
+      );
+  }
+  .gallery__item {
+    position: relative;
+    padding: 0 0 85% 0;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+  }
+
+  .gallery__item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+@media screen and (min-width: 320px) {
+  .gallery__item:nth-child(1) {
+    grid-row-start: row2;
+  }
+  .gallery__item:nth-child(2) {
+    grid-row-start: row2;
+    transform: translateY(60%);
+  }
+  .gallery__item:nth-child(3) {
+    transform: translateY(60%);
+    grid-column-start: 2;
+  }
+  .gallery__item:nth-child(4) {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+  .gallery__item:nth-child(5) {
+    transform: translateY(70%);
+  }
+  .gallery__item:nth-child(6) {
+    transform: translateY(40%);
+  }
+  .gallery__item:nth-child(7) {
+    transform: translateY(40%);
+    grid-row-start: row2;
+    grid-column-start: 6;
+  }
+  .gallery__item:nth-child(8) {
+    grid-row-start: row-end;
+    grid-column-start: 3;
+  }
+  .gallery__item:nth-child(9) {
+    transform: translateY(105%);
+  }
+  .gallery__item:nth-child(10) {
+    transform: translateY(70%);
+  }
 }
