change some colors

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -28,7 +28,7 @@
       </li>
       <li class="contacts__branch">
       <ul class="branch">
-        <p class="branch__type">foodtruck</p>
+        <p class="branch__type branch__type--color">foodtruck</p>
         <li class="branch__content">
           <p class="branch__location">Los Angeles</p>
           <p class="branch__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
