--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,9 +15,9 @@
     </button>
 
     <nav class="header__nav">
-      <ul>
+      <ul class="header__nav-list">
         <li class="header__nav-item">
-          <a class="header__nav-link" href="">Home</a>
+          <a class="header__nav-link header-scroll-current" href="">Home</a>
         </li>
         <li class="header__nav-item">
           <a class="header__nav-link" href="">About us</a>
@@ -34,7 +34,7 @@
       </ul>
     </nav>
 
-    <button class="header__buy-btn button" type="button">
+    <button class="header__buy-btn button button--with-hover" type="button">
       <span class="header__buy-text">Buy now</span>
       <svg class="header__buy-icon" width="15" height="20">
         <use href="./images/icons.svg#icon-arrow-common"></use>
@@ -53,7 +53,7 @@
           </svg>
         </button>
 
-        <button class="mob-menu__buy-btn button">
+        <button class="mob-menu__buy-btn button button--with-hover">
           <span class="mob-menu__buy-text">Buy now</span>
           <span>
             <svg class="mob-menu__buy-icon" width="15" height="20">
