--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,13 +6,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-one-cup-mob-x1.png,
-              ../images/gallery/mobile/gall-one-cup-mob-x2.png
+              ./images/gallery/mobile/gall-one-cup-mob-x1.png,
+              ./images/gallery/mobile/gall-one-cup-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-one-cup-des-x1.png"
+            src="./images/gallery/desktop/gall-one-cup-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -22,13 +22,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-three-icelolly-mob-x1.png,
-              ../images/gallery/mobile/gall-three-icelolly-mob-x2.png
+              ./images/gallery/mobile/gall-three-icelolly-mob-x1.png,
+              ./images/gallery/mobile/gall-three-icelolly-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-three-icelolly-des-x1.png"
+            src="./images/gallery/desktop/gall-three-icelolly-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -38,13 +38,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-two-ice-mob-x1.png,
-              ../images/gallery/mobile/gall-two-ice-mob-x2.png
+              ./images/gallery/mobile/gall-two-ice-mob-x1.png,
+              ./images/gallery/mobile/gall-two-ice-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-two-ice-des-x1.png"
+            src="./images/gallery/desktop/gall-two-ice-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -54,13 +54,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-four-manyice-mob-x1.png,
-              ../images/gallery/mobile/gall-four-manyice-mob-x2.png
+              ./images/gallery/mobile/gall-four-manyice-mob-x1.png,
+              ./images/gallery/mobile/gall-four-manyice-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-four-manyice-des-x1.png"
+            src="./images/gallery/desktop/gall-four-manyice-des-x1.png"
             alt="ice cream"
             width="283"
           />
@@ -70,13 +70,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-six-icebowl-mob-x1.png,
-              ../images/gallery/mobile/gall-six-icebowl-mob-x2.png
+              ./images/gallery/mobile/gall-six-icebowl-mob-x1.png,
+              ./images/gallery/mobile/gall-six-icebowl-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-six-icebowl-des-x1.png"
+            src="./images/gallery/desktop/gall-six-icebowl-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -86,13 +86,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-eight-icedog-mob-x1.png,
-              ../images/gallery/mobile/gall-eight-icedog-mob-x2.png
+              ./images/gallery/mobile/gall-eight-icedog-mob-x1.png,
+              ./images/gallery/mobile/gall-eight-icedog-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-eight-icedog-des-x1.png"
+            src="./images/gallery/desktop/gall-eight-icedog-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -102,13 +102,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-nine-koffee-mob-x1.png,
-              ../images/gallery/mobile/gall-nine-koffee-mob-x2.png
+              ./images/gallery/mobile/gall-nine-koffee-mob-x1.png,
+              ./images/gallery/mobile/gall-nine-koffee-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-nine-koffee-des-x1.png"
+            src="./images/gallery/desktop/gall-nine-koffee-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -118,13 +118,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-five-face-mob-x1.png,
-              ../images/gallery/mobile/gall-five-face-mob-x2.png
+              ./images/gallery/mobile/gall-five-face-mob-x1.png,
+              ./images/gallery/mobile/gall-five-face-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-five-face-des-x1.png"
+            src="./images/gallery/desktop/gall-five-face-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -134,13 +134,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-ten-cake-mob-x1.png,
-              ../images/gallery/mobile/gall-ten-cake-mob-x2.png
+              ./images/gallery/mobile/gall-ten-cake-mob-x1.png,
+              ./images/gallery/mobile/gall-ten-cake-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-ten-cake-des-x1.png"
+            src="./images/gallery/desktop/gall-ten-cake-des-x1.png"
             alt="ice cream"
             width="138"
           />
@@ -150,13 +150,13 @@
         <picture>
           <source
             srcset="
-              ../images/gallery/mobile/gall-seven-icehand-mob-x1.png,
-              ../images/gallery/mobile/gall-seven-icehand-mob-x2.png
+              ./images/gallery/mobile/gall-seven-icehand-mob-x1.png,
+              ./images/gallery/mobile/gall-seven-icehand-mob-x2.png
             "
             media="(max-width: 767.98px)"
           />
           <img
-            src="../images/gallery/desktop/gall-seven-icehand-des-x1.png"
+            src="./images/gallery/desktop/gall-seven-icehand-des-x1.png"
             alt="ice cream"
             width="138"
           />
