--- a/src/sass/common/_button.scss
+++ b/src/sass/common/_button.scss
@@ -15,5 +15,13 @@
         }
     }
 
+    &--with-accent-hover {
+
+        &:hover,
+        &:focus {
+            background-color: #A61035;
+        }
+    }
+
 
 }
