--- a/src/sass/reviews/_reviews.scss
+++ b/src/sass/reviews/_reviews.scss
@@ -2,6 +2,7 @@
 
 .swiper {
     width: 100%;
+    
 
 }
 
@@ -24,30 +25,88 @@
     bottom: 0;
 }
 
-.swiper-pagination-bullet-active {
-    background-color: transparent;
-    background-image: url(../images/cust-home.svg);
-    display: inline-flex;
-    height: 12px;
-    width: 12px;
+// ФОТО АВАТАРА
+
+.thumb {
+    // на таблетку 150px
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 32px;
+    overflow: hidden;
+    box-shadow: rgb(5, 244, 113) 0px 20px 30px -10px;
+}
+
+.thumb__img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    object-position: center;
+    
+}
+
+// зміна значків падінейшин початок
+.swiper-pagination-bullet {
+    background-color: #c97c8e;
+    opacity: 0.7;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    border-radius: 0;
+    border-radius: 50%;
+
 
 }
 
-.swiper-slide__avatar {
-    background-image: url(../images/customer-reviews/mobile/cust-emily-mob-x1.png);
+.swiper-pagination-bullet:first-child {
 
-    height: 85px;
-    width: 85px;
-    margin-bottom: 32px;
-   
+    background-image: url(../images/customer-reviews/reviews/bgi-jul.png);
+
+}
+
+.swiper-pagination-bullet:nth-child(2) {
+
+    background-image: url(../images/customer-reviews/reviews/bgi-max.png);
+}
+
+.swiper-pagination-bullet:nth-child(3) {
+
+    background-image: url(../images/customer-reviews/reviews/bgi-maks.png);
+}
+
+.swiper-pagination-bullet:nth-child(4) {
+
+    background-image: url(../images/customer-reviews/reviews/bgi-lavr.png);
+}
+
+
+
+.swiper-pagination-bullet-active {
+    background-color: transparent;
+     // background-image: url(../image/home.svg);
+    display: inline-flex;
+    // на таблетку 70рх
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    opacity: 1;
+    
+
+}
+.swiper-pagination-bullet-active:nth-child(3n + 1){
+    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px;
+
+}
+.swiper-pagination-bullet-active:nth-child(3n+2){
+    box-shadow: rgba(240, 146, 20, 0.4) 5px 5px, rgba(240, 146, 20, 0.3) 10px 10px, rgba(240, 146, 20, 0.2) 15px 15px, rgba(240, 146, 20, 0.1) 20px 20px;
+}
+.swiper-pagination-bullet-active:nth-child(3n+3) {
+    box-shadow: rgba(54, 238, 63, 0.4) 5px 5px, rgba(54, 238, 63, 0.3) 10px 10px, rgba(54, 238, 63, 0.2) 15px 15px, rgba(54, 238, 63, 0.1) 20px 20px;
 }
 
 
@@ -124,5 +183,5 @@
 
     line-height: 1.86;
     text-align: center;
-    margin-bottom: 28px;
+    margin-bottom: 56px;
 }
