header-tab-part3
remade mane + fix styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,45 +4,59 @@
       <img 
       src="./images/hero-header/logo.svg" 
       alt="logo" 
-      class="header_logo"
+      class="header__logo"
       width="199" height="50"/>
     </a>
 
-    <button class="mob-menu__open-btn button" type="button">
-      <svg class="mob-menu__btn-icon-open" width="20" height="12">
+    <button class="header__menu-open-btn button js-open" 
+      aria-label="Открыть мобильное меню"
+      aria-expanded="true">
+      <svg class="header__menu-btn-icon-open" width="20" height="12">
         <use href="./images/icons.svg#icon-menu"></use>
       </svg>
     </button>
 
-    <nav class="header__nav">
-      <ul class="header__nav-list">
-        <li class="header__nav-item">
-          <a class="header__nav-link header-scroll-current" href="">Home</a>
-        </li>
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="">About us</a>
-        </li>
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="">How it's made?</a>
-        </li>
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="">Our products</a>
-        </li>
-        <li class="header__nav-item">
-          <a class="header__nav-link" href="">Contacts</a>
-        </li>
-      </ul>
-    </nav>
 
-    <button class="header__buy-btn button button--with-hover" type="button">
-      <span class="header__buy-text">Buy now</span>
-      <svg class="header__buy-icon" width="15" height="20">
-        <use href="./images/icons.svg#icon-arrow-common"></use>
-      </svg>
-    </button>
+    <div class="header__menu header__menu--js">
+      <div class="header__menu-wrapper">
+        <button class="header__menu-close-btn button js-close"
+        aria-label="Закрыть мобильное меню">
+          <svg class="header__menu-close-btn-icon" width="14" height="14">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <button class="header__buy-btn button button--with-hover" type="button">
+          <span class="header__buy-text">Buy now</span>
+          <svg class="header__buy-icon" width="15" height="20">
+            <use href="./images/icons.svg#icon-arrow-common"></use>
+          </svg>
+        </button>
+
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li class="header__nav-item">
+              <a class="link header__nav-link header-scroll-current" href="">Home</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="">About us</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="">How it's made?</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="">Our products</a>
+            </li>
+            <li class="header__nav-item">
+              <a class="header__nav-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </div>
 
-  <div class="backdrop-mob is-hidden">
+<!--<div class="backdrop-mob is-hidden">
     <div class="mob-menu">
       <div class="mob-menu__wrapper">
         <h2 class="visually-hidden">Mobile menu</h2>
@@ -81,5 +95,6 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div>-->
+  
 </header>
