--- a/src/sass/header/_page-header.scss
+++ b/src/sass/header/_page-header.scss
@@ -1,8 +1,4 @@
 .header {
-
-    /*background-color: rgba(255,184,202,0.8);*/
-
-
     box-sizing: border-box;
     position: absolute;
     top: 0;
@@ -33,47 +29,134 @@
     display: block;
 }
 
-.header__nav {
+.header__menu {
     display: none;
+   
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    
+    background-color: #E17992;
 
-    @media screen and (min-width: 1280px) {
-        display: block;
-        margin: 0 auto;
+    @media screen and (min-width: 768px) {
+        width: 70%;
+    }
+
+    @media screen and (min-width: 1200px) {
+        position: relative;
+        display: flex;
+        background-color: transparent;
+        align-items: center;
     }
 }
 
-.header__nav-list {
+.is-open {
+    @media screen and (max-width: 1199px) {
+        display: flex;
+    }
+}
+
+.header__menu-wrapper{
+    width: 100%;
+
+    margin: 0 auto;
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+}
+
+
+.header__menu-close-btn {
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-left: auto;
     display: flex;
-    align-items: baseline;
+
+    background-color: transparent;
+
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+}
+
+.header__menu-close-btn-icon {
+    display: block;
+    fill: #ffffff;
+}
+
+.header__menu-close-btn-icon:hover {
+    fill: $accent-color;
+}
+
+
+.header__nav-list {
+    margin-top: 32px;
+    margin-bottom: 0;
+    list-style: none;
+
+    @media screen and (min-width: 1200px) {
+        margin-top: 0;
+        display: flex;
+    }
 }
 
 .header__nav-item:not(:last-child) {
-    margin-right: 35px;
+    @media screen and (min-width: 1200px) {
+        margin-right: 35px;
+        
+    }
 }
+
 
 .header__nav-link {
+    display: flex;
+    align-items: center;
     text-decoration: none;
-    display: inline-block;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.31;
     color: #ffffff;
+    padding: 12px 0 12px 20px;
+
+    border-top: 1px solid #E18298;
+    border-bottom: 1px solid #E18298;
+
+    @media screen and (min-width: 1200px) {
+        display: inline-block;
+        border: 0;
+        padding: 0;
+    }
 }
 
-.header__buy-btn {
-    display: none;
-    
-   @media screen and (min-width: 768px) {
-    width: 160px;
-    height: 44px;
 
+.header__buy-btn {
     display: inline-flex;
-    align-items: center;
+
     text-align: center;
     justify-content: center;
 
+    padding-top: 12px;
+    margin-top: 60px;
+    margin-left: 20px;
+    margin-right: 20px;
+
+    height: 44px;
+    width: 209px;
+
     background-color: #fff;
-   }
+
+    @media screen and (min-width: 768px) {
+        width: 186px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-top: 0;
+        margin-right: 0;
+        margin-left: 130px;
+        width: 160px;
+    }
 }
 
 .header__buy-text {
@@ -86,40 +169,6 @@
     fill: $accent-color;
     margin-left: 10px;
 }
-
-
-
-
-/*----MOBILE MENU----*/
-
-.mob-menu__open-btn {
-    height: 40px;
-    width: 40px;
-    text-align: center;
-
-    margin-left: auto;
-    margin-right: 30px;
-    padding: 0;
-    border: 0;
-    cursor: pointer;
-
-    background-color: transparent;
-
-    @media screen and (min-width: 768px){
-        margin-right: 32px;
-        margin-left: auto;
-    }
-
-    @media screen and (min-width: 1280px) {
-        display: none;
-    }
-
-}
-
-.mob-menu__btn-icon-open {
-    fill: $accent-color;
-}
-
 
 
 .visually-hidden {
@@ -141,105 +190,6 @@
     visibility: hidden;
 }
 
-.backdrop-mob {
-    position: fixed;
-    right: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    
-    background-color: #E17992;
-
-    @media screen and (min-width: 768px) {
-        width: 256px;
-
-    }
-
-    @media screen and (min-width: 1280px) {
-        display: none;
-    }
-}
-
-.mob-menu {
-
-    height: 100%;
-    top: 0;
-    right: 0;
-    
-    padding: 20px 0;
-    margin: 0 auto;
-}
-
-
-.mob-menu__wrapper {
-    width: 100%;
-
-    margin: 0 auto;
-
-    
-}
-
-
-.mob-menu__close-btn {
-    padding-right: 20px;
-    margin-left: auto;
-    display: block;
-
-    background-color: transparent;
-}
-
-.mob-menu__close-icon {
-    fill: #ffffff;
-}
-
-.mob-menu__close-icon:hover {
-    fill: $accent-color;
-}
-
-.mob-menu__buy-btn {
-    display: inline-flex;
-
-    text-align: center;
-    justify-content: center;
-
-    padding: 12px 48px;
-    margin-top: 60px;
-    margin-left: 20px;
-    margin-right: 20px;
-
-    height: 44px;
-    width: 209px;
-
-    background-color: #fff;
-}
-
-.mob-menu__buy-text {
-    font-size: 16px;
-    font-weight: 700;
-    color: $accent-color;
-}
-
-.mob-menu__buy-icon {
-    fill: $accent-color;
-    margin-left: 10px;
-}
-
-.mob-menu__list {
-    margin-top: 32px;
-    margin-bottom: 0;
-    list-style: none;
-}
-
-.mob-menu__link {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #fff;
-    padding: 12px 0 12px 20px;
-
-    border-top: 1px solid #E18298;
-    border-bottom: 1px solid #E18298;
-}
 
 .header__scroll {
     position: fixed;
