--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ice Cream Group-28</title>
+</head>
+<body>
+
+
+
+
 <section class="section products">
   <div class="container">
     <p class="products__label">100% natural</p>
@@ -7,7 +20,7 @@
 
     <ul class="products__list">
       <li class="card">
-        <div class="card__fon card__fon--ice">
+        <div class="card__wrapper card__wrapper--ice">
           <!-- На него мороженку как псевдо -->
 
           <h3 class="products__subtitle">ice cream</h3>
@@ -19,12 +32,18 @@
             facilisis.
           </p>
 
-          <button type="button" class="products__button"></button>
+          <button type="button" class="products__button button">
+
+            <svg class="icon button__arrow--products" width="18" height="12">
+              <use href="./images/icons.svg#icon-arrow-products"></use>
+            </svg>
+            
+          </button>
         </div>
       </li>
 
       <li class="card">
-        <div class="card__fon card__fon--coffee">
+        <div class="card__wrapper card__wrapper--coffee">
           <!-- На него мороженку как псевдо -->
 
           <h3 class="products__subtitle">ice coffee</h3>
@@ -36,13 +55,18 @@
             facilisis.
           </p>
 
-          <button type="button" class="products__button"></button>
+          <button type="button" class="products__button button">
+
+            <svg class="icon button__arrow--products" width="18" height="12">
+              <use href="./images/icons.svg#icon-arrow-products"></use>
+            </svg>
+
+          </button>
         </div>
       </li>
 
       <li class="card">
-        <div class="card__fon card__fon--shakes">
-          <!-- На него мороженку как псевдо -->
+        <div class="card__wrapper card__wrapper--shakes">
 
           <h3 class="products__subtitle">milkshakes</h3>
           <!-- На него точечки как псевдо -->
@@ -53,9 +77,28 @@
             facilisis.
           </p>
 
-          <button type="button" class="products__button"></button>
+          <button type="button" class="products__button button">
+
+            <svg class="icon button__arrow--products" width="18" height="12">
+              <use href="./images/icons.svg#icon-arrow-products"></use>
+            </svg>
+
+
+          </button>
         </div>
       </li>
     </ul>
   </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+</body>
+</html>
