--- a/src/sass/products/_products.scss
+++ b/src/sass/products/_products.scss
@@ -1,46 +1,43 @@
-.products {}
-
 .products__label {
     margin-bottom: 15px;
 
-
+    text-align: center;
     font-family: 'Titan One';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 21px;
     text-transform: uppercase;
-    color: #FFA5BA;
+    color: $secondary-title-color;
 }
 
 .products__title {
     margin-bottom: 8px;
 
 
-
-    font-family: 'Titan One';
+    text-align: center;
+    font-family: 'Titan One', 'cursive';
     font-style: normal;
     font-weight: 400;
     font-size: 34px;
     line-height: 39px;
-    text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #D41443;
+    color: $accent-color;
 }
 
 .products__subtitle {
-    margin-bottom: 70px;
+    position: relative;
 
 
-    font-family: 'Titan One';
+    font-family: 'Titan One', 'cursive';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: $primary-inverse-text-color;
 }
 
 .products__text {
@@ -48,53 +45,138 @@
 
 
     text-align: center;
-
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
     line-height: 152%;
     letter-spacing: 0.04em;
-    color: #FFFFFF;
+    color: $primary-inverse-text-color;
 }
 
 .products__button {
+    @extend %flex-center;
+
+    margin-left: auto;
+    margin-right: auto;
+
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    border-color: #FFFFFF;
-    background-color: #FFFFFF;
+    background-color: $primary-background-color;
 
 }
 
 /* Список карточек */
-.products__list {}
 
 .card {
     padding-top: 140px;
-
 }
 
-.card__fon {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.card__wrapper {
+    position: relative;
+
 
     padding-top: 160px;
+    padding-left: 40px;
+    padding-right: 40px;
     padding-bottom: 40px;
 
-    // width: 280px;
-    border-radius: 24px;
+    border-radius: 24px; 
+    
+    text-align: center;
 }
 
-.card__fon--ice {
+.card__wrapper--ice {
     background-color: #FFB8CA;
 }
 
-.card__fon--coffee {
+.card__wrapper--coffee {
     background-color: #F0D1A5;
 }
 
-.card__fon--shakes {
+.card__wrapper--shakes {
     background-color: #C2E297;
+}
+
+
+
+.card__wrapper--ice::before {
+    position: absolute;
+    top: -140px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    content: '';
+   
+    background-image: url(../images/products/mobile/prod-cream-mob-x1.png);
+
+    width: 280px;
+    height: 280px;
+}
+
+.card__wrapper--coffee::before {
+    position: absolute;
+    top: -140px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    content: '';
+
+    background-image: url(../images/products/mobile/prod-coffee-mob-x1.png);
+
+    width: 280px;
+    height: 280px;
+}
+
+.card__wrapper--shakes::before {
+    position: absolute;
+    top: -140px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    content: '';
+
+    background-image: url(../images/products/mobile/prod-shakes-mob-x1.png);
+
+    width: 280px;
+    height: 280px;
+}
+
+
+/*
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .card__wrapper--shakes::before {
+        background-image: url(../images/products/mobile/prod-shakes-mob-x2.png);
+    }
+}
+*/
+
+
+
+
+
+
+
+
+
+.products__subtitle::after {
+
+    content: '\22EF';
+
+    display: block;
+    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 32px;
+    margin-bottom: 32px;
+
+    font-size: 40px;
+}
+
+
+.button__arrow--products {
+    color: $accent-color;
 }
