--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,165 +2,105 @@
   <h2 hidden>gallery</h2>
   <div class="gallery__container">
     <ul class="gallery__list">
-      <li class="gallery__item gallery__item--first">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-one-cup-mob-x1.png,
-              ./images/gallery/mobile/gall-one-cup-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-one-cup-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-one-cup-mob-x1.png 44w,
+                            ../images/Gallery/mobile/gall-one-cup-mob-x2.png 88w,
+                             ../images/Gallery/tablet/gall-one-cup-tab-x1.png 105w,
+                              ../images/Gallery/desktop/gall-one-cup-des-x1.png 138w,
+                             ../images/Gallery/tablet/gall-one-cup-tab-x2.png 210w,
+                             ../images/Gallery/desktop/gall-one-cup-des-x2.png 276w
+                  " src="../images/Gallery/desktop/gall-one-cup-des-x1.png" alt="ice cream" width="138"
+          sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--second">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-three-icelolly-mob-x1.png,
-              ./images/gallery/mobile/gall-three-icelolly-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-three-icelolly-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-three-icelolly-mob-x1.png 44w,
+                             ../images/Gallery/mobile/gall-three-icelolly-mob-x2.png 88w,
+                              ../images/Gallery/tablet/gall-three-icelolly-tab-x1.png 105w,
+                               ../images/Gallery/desktop/gall-three-icelolly-des-x1.png 138w,
+                              ../images/Gallery/tablet/gall-three-icelolly-tab-x2.png 210w,  
+                              ../images/Gallery/desktop/gall-three-icelolly-des-x2.png 276w
+                              " src="../images/Gallery/desktop/gall-three-icelolly-des-x1.png" alt="three-icelolly"
+          width="138" sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--third">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-two-ice-mob-x1.png,
-              ./images/gallery/mobile/gall-two-ice-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-two-ice-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-two-ice-mob-x1.png 44w,
+                           ../images/Gallery/mobile/gall-two-ice-mob-x2.png 88w,
+                            ../images/Gallery/tablet/gall-two-ice-tab-x1.png 105w,
+                             ../images/Gallery/desktop/gall-two-ice-des-x1.png 138w,
+                            ../images/Gallery/tablet/gall-two-ice-tab-x2.png 210w,         
+                            ../images/Gallery/desktop/gall-two-ice-des-x2.png 276w
+                            " src="../images/Gallery/desktop/gall-two-ice-des-x1.png" alt="ice cream" width="138"
+          sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--fourth">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-four-manyice-mob-x1.png,
-              ./images/gallery/mobile/gall-four-manyice-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-four-manyice-des-x1.png"
-            alt="ice cream"
-            width="283"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-four-manyice-mob-x1.png 90w,
+                             ../images/Gallery/mobile/gall-four-manyice-mob-x2.png 180w,
+                              ../images/Gallery/tablet/gall-four-manyice-tab-x1.png 215w,
+                              ../images/Gallery/desktop/gall-four-manyice-des-x1.png 283w,
+                              ../images/Gallery/tablet/gall-four-manyice-tab-x2.png 430w,
+                              ../images/Gallery/desktop/gall-four-manyice-des-x2.png 566w
+                              " src="../images/Gallery/desktop/gall-four-manyice-des-x1.png" alt="ice cream"
+          width="138" sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--fifth">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-six-icebowl-mob-x1.png,
-              ./images/gallery/mobile/gall-six-icebowl-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-six-icebowl-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-five-face-mob-x1.png 44w,
+                             ../images/Gallery/mobile/gall-five-face-mob-x2.png 88w,
+                              ../images/Gallery/tablet/gall-five-face-tab-x1.png 105w,
+                              ../images/Gallery/desktop/gall-five-face-des-x1.png 138w,
+                              ../images/Gallery/tablet/gall-five-face-tab-x2.png 210w,
+                              ../images/Gallery/desktop/gall-five-face-des-x2.png 276w
+                              " src="../images/Gallery/deskt-five-face-face-des-x1.png" alt="ice cream" width="138"
+          sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--sixth">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-eight-icedog-mob-x1.png,
-              ./images/gallery/mobile/gall-eight-icedog-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-eight-icedog-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-six-icebowl-mob-x1.png 44w,
+                             ../images/Gallery/mobile/gall-six-icebowl-mob-x2.png 88w,
+                              ../images/Gallery/tablet/gall-six-icebowl-tab-x1.png 105w,
+                              ../images/Gallery/desktop/gall-six-icebowl-des-x1.png 138w,
+                              ../images/Gallery/tablet/gall-six-icebowl-tab-x2.png 210w,
+                              ../images/Gallery/desktop/gall-six-icebowl-des-x2.png 276w
+                              " src="../images/Gallery/desktop/gall-six-icebowl-des-x1.png" alt="ice cream" width="138"
+          sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--seventh">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-nine-koffee-mob-x1.png,
-              ./images/gallery/mobile/gall-nine-koffee-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-nine-koffee-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-seven-icehand-mob-x1.png 44w,
+                               ../images/Gallery/mobile/gall-seven-icehand-mob-x2.png 88w,
+                                ../images/Gallery/tablet/gall-seven-icehand-tab-x1.png 105w,
+                                ../images/Gallery/tablet/gall-seven-icehand-tab-x2.png 210w,
+                                ../images/Gallery/desktop/gall-seven-icehand-des-x1.png 138w,
+                                ../images/Gallery/desktop/gall-seven-icehand-des-x2.png 276w
+                                " src="../images/Gallery/desktop/gall-seven-icehand-des-x1.png" alt="ice cream"
+          width="138" sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--eighth">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-five-face-mob-x1.png,
-              ./images/gallery/mobile/gall-five-face-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-five-face-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-eight-icedog-mob-x1.png 44w,
+                               ../images/Gallery/mobile/gall-eight-icedog-mob-x2.png 88w,
+                                ../images/Gallery/tablet/gall-eight-icedog-tab-x1.png 105w,
+                                ../images/Gallery/tablet/gall-eight-icedog-tab-x2.png 210w,
+                                ../images/Gallery/desktop/gall-eight-icedog-des-x1.png 138w,
+                                ../images/Gallery/desktop/gall-eight-icedog-des-x2.png 276w
+                                " src="../images/Gallery/desktop/gall-eight-icedog-des-x1.png" alt="ice cream"
+          width="138" sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--ninth">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-ten-cake-mob-x1.png,
-              ./images/gallery/mobile/gall-ten-cake-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-ten-cake-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-nine-koffee-mob-x1.png 44w,
+                               ../images/Gallery/mobile/gall-nine-koffee-mob-x2.png 88w,
+                                ../images/Gallery/tablet/gall-nine-koffee-tab-x1.png 105w,
+                                ../images/Gallery/tablet/gall-nine-koffee-tab-x2.png 210w,
+                                ../images/Gallery/desktop/gall-nine-koffee-des-x1.png 138w,
+                                ../images/Gallery/desktop/gall-nine-koffee-des-x2.png 276w
+                                " src="../images/Gallery/desktop/gall-nine-koffee-des-x1.png" alt="ice cream"
+          width="138" sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
-      <li class="gallery__item gallery__item--tenth">
-        <picture>
-          <source
-            srcset="
-              ./images/gallery/mobile/gall-seven-icehand-mob-x1.png,
-              ./images/gallery/mobile/gall-seven-icehand-mob-x2.png
-            "
-            media="(max-width: 767.98px)"
-          />
-          <img
-            src="./images/gallery/desktop/gall-seven-icehand-des-x1.png"
-            alt="ice cream"
-            width="138"
-          />
-        </picture>
+      <li class="gallery__item">
+        <img srcset="../images/Gallery/mobile/gall-ten-cake-mob-x1.png 44w,
+                             ../images/Gallery/mobile/gall-ten-cake-mob-x2.png 88w,
+                              ../images/Gallery/tablet/gall-ten-cake-tab-x1.png 105w,
+                              ../images/Gallery/tablet/gall-ten-cake-tab-x2.png 210w,
+                              ../images/Gallery/desktop/gall-ten-cake-des-x1.png 138w,
+                              ../images/Gallery/desktop/gall-ten-cake-des-x2.png 276w
+                              " src="../images/Gallery/desktop/gall-ten-cake-des-x1.png" alt="ice cream" width="138"
+          sizes="(min-width: 1600px) 10vw, (min-width: 1200px) 12vw, (min-width: 320px) 15vw" />
       </li>
     </ul>
   </div>
