--- a/src/sass/gallery/_gallery.scss
+++ b/src/sass/gallery/_gallery.scss
@@ -8,30 +8,41 @@
 
   .gallery__container {
     padding: 0;
-    max-width: 320px;
     margin: 0 auto;
+    @media screen and (min-width: 768px) {
+      padding: 0 93px;
+    }
   }
   .gallery__list {
     width: 100%;
-    max-width: 100vh;
+    max-width: 100vw;
     display: grid;
-
-    gap: 2.53px;
-    grid-template-columns: repeat(auto-fit, minmax(43px, 1fr));
-    grid-template-rows: [start] minmax(43px, 1fr) [row2] minmax(43px, 1fr) [row-end] minmax(
-        43px,
+    gap: 5px;
+    @media screen and (min-width: 320px) {
+      column-gap: 0.6%;
+      row-gap: 1.8%;
+    }
+    grid-template-columns: repeat(minmax(44px, 1fr));
+    grid-template-rows: [start] minmax(44px, 1fr) [row2] minmax(44px, 1fr) [row-end] minmax(
+        44px,
         1fr
       );
+    background-color: transparent;
   }
   .gallery__item {
     position: relative;
-    padding: 0 0 85% 0;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-    -webkit-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
-    -moz-box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
+    height: auto;
+    padding: 0 0 99% 0;
+    border-radius: 17%;
+    @media screen and (min-width: 320px) {
+      box-shadow: 0px 12px 10px -1px rgba(0, 0, 0, 0.215);
+      -webkit-box-shadow: 0px 12px 10px -1px rgba(0, 0, 0, 0.215);
+      -moz-box-shadow: 0px 12px 10px -1px rgba(0, 0, 0, 0.215);
+    }
+    &:nth-child(4) {
+      border-radius: 9%;
+    }
   }
-
   .gallery__item img {
     position: absolute;
     top: 0;
@@ -58,24 +69,28 @@
     grid-row: span 2;
   }
   .gallery__item:nth-child(5) {
-    transform: translateY(70%);
-  }
-  .gallery__item:nth-child(6) {
-    transform: translateY(40%);
-  }
-  .gallery__item:nth-child(7) {
-    transform: translateY(40%);
-    grid-row-start: row2;
-    grid-column-start: 6;
-  }
-  .gallery__item:nth-child(8) {
     grid-row-start: row-end;
     grid-column-start: 3;
   }
+  .gallery__item:nth-child(6) {
+    transform: translateY(70%);
+  }
+  .gallery__item:nth-child(7) {
+    transform: translateY(70%);
+    grid-row-start: row2;
+    grid-column-start: 5;
+  }
+  .gallery__item:nth-child(8) {
+    transform: translateY(40%);
+  }
   .gallery__item:nth-child(9) {
-    transform: translateY(105%);
+    grid-row-start: row2;
+    grid-column-start: 6;
+    transform: translateY(40%);
   }
   .gallery__item:nth-child(10) {
-    transform: translateY(70%);
+    grid-column-start: 7;
+    grid-row-start: row2;
+    transform: translateY(5%);
   }
 }
